--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,21 @@
     transform: rotate(360deg);
   }
 }
+
+.button-city{
+  width: 250px;
+  height: 50px;
+  margin-bottom: 5px;
+  letter-spacing: 0.5px;
+  background-color: #eceff7;
+  color: #000;
+  font-size: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  border: none;
+  transition-duration: .5s;
+}
+
+.active{
+  background-color: #c1d7fc;
+  }
