--- a/src/components/Popup/Popup.css
+++ b/src/components/Popup/Popup.css
@@ -1,3 +1,9 @@
+.popup{
+    width: 250px;
+    padding: 10px;
+    text-align: center;
+}
+
 .button-city{
     width: 250px;
     height: 50px;
@@ -11,7 +17,7 @@
     border: none;
     transition-duration: .5s;
 }
-
-.active{
+  
+.button-city.active{
     background-color: #c1d7fc;
-    }
+}
